Updated database (ReminderTable), included icons and related spinner selector. Added date and time picker dialogs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,11 @@
     <string name="dbFileName" translatable="false">com.mobicomp_notificationapp</string>
     <string name="newuser_button">Create new user</string>
     <string name="modifyuser_button">Edit user profile</string>
+    <string-array name="icons_array">
+        <item>Default</item>
+        <item>Important</item>
+        <item>Sport</item>
+        <item>Study</item>
+        <item>Work</item>
+    </string-array>
 </resources>
