Added locations database table, added Google Maps functionality with ability to save locations. Integration with rest of system still incomplete.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="dbFileName" translatable="false">com.mobicomp_notificationapp</string>
     <string name="newuser_button">Create new user</string>
     <string name="modifyuser_button">Edit user profile</string>
+    <string name="title_activity_maps">Map</string>
     <string-array name="icons_array">
         <item>Default</item>
         <item>Important</item>
